--- a/templates/question.html
+++ b/templates/question.html
@@ -14,13 +14,14 @@
     </nav>
     <main>
         <div id="question_details">
-            <span id="question_topic">#trendingtopic</span> • <span id="question_type">Trivia</span>
+            <span id="question_topic">{{question['trending_topic']}}</span> • <span id="question_type">{{question['type']}}</span>
         </div>
-        <div id="question_question">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde adipisci, sed soluta laboriosam blanditiis rerum ipsum maxime.
-        </div>
-        <form action="" method="post" id="question_options" />
+        <div id="question_question">{{question['question']}}</div>
+        <form action="" method="post" id="question_options">
+            {% for option in question['options'] %}
+                <label><input type="radio" name="submission">{{option}}</label>
+            {% endfor %}
+        </form>
     </main>
-    <script src="script.js"></script>
 </body>
 </html>
