--- a/static/style.css
+++ b/static/style.css
@@ -59,3 +59,67 @@ main > * {
 #question_options > label > input {
     display: none;
 }
+
+@keyframes float-up {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-80px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes float-down {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(120px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+@keyframes float-left {
+    0% {
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(-120px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
+}
+
+@keyframes float-right {
+    0% {
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(120px);
+    }
+    100% {
+        transform: translateX(0px);
+    }
+}
+
+.floating-button:nth-child(1) {
+    animation: float-up 12s infinite;
+}
+
+.floating-button:nth-child(2) {
+    animation: float-down 14s infinite;
+}
+
+.floating-button:nth-child(3) {
+    animation: float-left 16s infinite;
+}
+
+.floating-button:nth-child(4) {
+    animation: float-right 18s infinite;
+}
