--- a/templates/question.html
+++ b/templates/question.html
@@ -6,12 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+              }
+            }
+          }
+        }
+      </script>
 </head>
 <body>
     <nav class="bg-gray-800 py-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center text-white">
-                <a href="index" class="bg-grey text-white font-bold py-2 px-4">Back</a>
                 <span id="user_username" class="mr-4">@appleseed</span>
                 <span id="user_score" class="bg-blue-500 text-white px-2 py-1 rounded-full">{{ userScore }}</span>
             </div>
@@ -26,22 +36,34 @@
         </div>
         <div id="question_question" class="top-50 left-0">{{question['question']}}</div>
         <form action="" method="post">
-            <div class="flex flex-col items-center mt-8">
-                <div class="flex justify-between w-full mb-4">
-                    <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center flex-grow">
-                        <span>{{ question['options'][0] }}</span>
-                    </button>
-                    <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center flex-grow ml-4">
-                        <span>{{ question['options'][1] }}</span>
-                    </button>
+            <div style="margin-top: 15%;" class="grid grid-cols-2 gap-8 justify-items-center items-center">
+                <div class="col-span-2 md:col-span-1 floating-button">
+                    <label>
+                        <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center w-full md:w-auto min-w-min min-h-full">
+                            <span>{{ question['options'][0] }}</span>
+                        </button>
+                    </label>
                 </div>
-                <div class="flex justify-between w-full">
-                    <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center flex-grow">
-                        <span>{{ question['options'][2] }}</span>
-                    </button>
-                    <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center flex-grow ml-4">
-                        <span>{{ question['options'][3] }}</span>
-                    </button>
+                <div class="col-span-2 md:col-span-1 floating-button">
+                    <label>
+                        <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center w-full md:w-auto min-w-min min-h-full">
+                            <span>{{ question['options'][1] }}</span>
+                        </button>
+                    </label>
+                </div>
+                <div class="col-span-2 md:col-span-1 floating-button">
+                    <label>
+                        <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center w-full md:w-auto min-w-min min-h-full">
+                            <span>{{ question['options'][2] }}</span>
+                        </button>
+                    </label>
+                </div>
+                <div class="col-span-2 md:col-span-1 floating-button">
+                    <label>
+                        <button class="bg-sky-500 hover:bg-sky-700 text-white font-bold py-4 px-6 rounded inline-flex items-center w-full md:w-auto min-w-min min-h-full">
+                            <span>{{ question['options'][3] }}</span>
+                        </button>
+                    </label>
                 </div>
             </div>
         </form>                                   
