--- a/templates/question.html
+++ b/templates/question.html
@@ -11,6 +11,7 @@
     <nav class="bg-gray-800 py-4">
         <div class="container mx-auto flex justify-between items-center">
             <div class="flex items-center text-white">
+                <a href="index" class="bg-grey text-white font-bold py-2 px-4">Back</a>
                 <span id="user_username" class="mr-4">@appleseed</span>
                 <span id="user_score" class="bg-blue-500 text-white px-2 py-1 rounded-full">{{ userScore }}</span>
             </div>
