[ADD]congruent style

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         <h1 class="title">What's the X?</h1>
         <a href="/tutorial" class="btn">Tutorial</a>
         <a href="/question" class="btn">Daily Trivia</a>
-        <a href="#" class="btn">Play Memes</a>
+        <a href="/leaderboard" class="btn">Leaderboard</a>
     </div>
     <div id="particles-js" class="particles-js-canvas-el" style="width: 100%; height: 100%;"></div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
