--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -20,7 +20,7 @@
 </head>
 <body class="font-sans bg-gray-100 text-custom">
     <div style="margin-left: 100px;" class="text-top-left">
-        <a href="index" class="bg-black hover:bg-grey text-white font-bold py-2 px-4 rounded inline-block mt-8">Back to Index</a>
+        <a href="index" class="bg-black hover:bg-grey text-white font-bold py-2 px-4 rounded inline-block mt-8">Back</a>
     </div>
     <div class="container mx-auto py-8">
         <h1 class="text-4xl font-bold text-center mb-12">How to Play</h1>
