--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 document, body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Playfair Display', serif;
     background: snow;
     margin: 0;
     padding: 0;
@@ -23,10 +23,6 @@ main > * {
     margin: 8px 0px;
 }
 
-#user_score::after {
-    content: ' ⭐️';
-}
-
 #question_details {
     font-weight: bold;
     color: gray;
@@ -34,6 +30,7 @@ main > * {
 
 #question_question {
     font-size: 3em;
+    color: white;
 }
 
 #question_options {
