--- a/templates/question.html
+++ b/templates/question.html
@@ -5,18 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
-      </script>
 </head>
 <body class="bg-black">
     <nav class="bg-neutral-700 py-4">
@@ -38,7 +28,7 @@
         <div id="question_details" class="top-0 left-0">
             <span id="question_topic">{{question['trending_topic']}}</span> • <span id="question_type">{{question['type']}}</span>
         </div>
-        <div id="question_question" class="top-50 left-0">{{question['question']}}</div>
+        <div id="question_question" class="top-50 left-0 text-white text-center">{{question['question']}}</div>
         <form action="" method="post">
             <div class="flex flex-col items-center mt-8">
                 <div class="flex justify-between w-full mb-4">
@@ -60,7 +50,7 @@
             </div>
         </form>                                   
     </main>
-    <div id="particles-js" class="particles-js-canvas-el" style="width: 200%; height: 200%;"></div>
+    <div id="particles-js" class="particles-js-canvas-el" style="width: 100%; height: 100%;"></div>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script>
         document.querySelectorAll('.x_button_option').forEach(button => {
