[ADD]correct path

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
     <div class="container">
         <h1 class="title">What's the X?</h1>
         <a href="/tutorial" class="btn">Tutorial</a>
-        <a href="/question" class="btn">Daily Trivia</a>
+        <a href="/q/trending" class="btn">Daily Trivia</a>
         <a href="/leaderboard" class="btn">Leaderboard</a>
     </div>
     <div id="particles-js" class="particles-js-canvas-el" style="width: 100%; height: 100%;"></div>
