--- a/templates/question.html
+++ b/templates/question.html
@@ -28,7 +28,9 @@
         <div id="question_details" class="top-0 left-0">
             <span id="question_topic">{{question['trending_topic']}}</span> • <span id="question_type">{{question['type']}}</span>
         </div>
-        <div id="question_question" class="top-50 left-0 text-white text-center">{{question['question']}}</div>
+        <div id="question_question" class="top-50 left-0 text-white text-center" style="font-size: 75px; font-family: 'Times New Roman', Times, serif;">
+            {{question['question']}}
+        </div>        
         <form action="" method="post">
             <div class="flex flex-col items-center mt-8">
                 <div class="flex justify-between w-full mb-4">
